ver 0.15.14 (2010/??/??)
* output_thread: fix assertion failure due to race condition in OPEN
* input:
  - rewind: fix double free bug
* decoders:
  - mp4ff, ffmpeg: add extension ".m4b" (audio book)


ver 0.15.13 (2010/10/10)
* output_thread: fix race condition after CANCEL command
* output:
  - httpd: fix random data in stream title
  - httpd: MIME type audio/ogg for Ogg Vorbis
* input:
  - rewind: update MIME not only once
  - rewind: enable for MMS


ver 0.15.12 (2010/07/20)
* input:
  - curl: remove assertion after curl_multi_fdset()
* tags:
  - rva2: set "gain", not "peak"
* decoders:
  - wildmidi: support version 0.2.3


ver 0.15.11 (2010/06/14)
* tags:
  - ape: support album artist
* decoders:
  - mp4ff: support tags "album artist", "albumartist", "band"
  - mikmod: fix memory leak
  - vorbis: handle uri==NULL
  - ffmpeg: fix memory leak
  - ffmpeg: free AVFormatContext on error
  - ffmpeg: read more metadata
  - ffmpeg: fix libavformat 0.6 by using av_open_input_stream()
* playlist: emit IDLE_OPTIONS when resetting single mode
* listen: make get_remote_uid() work on BSD


ver 0.15.10 (2010/05/30)
* input:
  - mms: fix memory leak in error handler
  - mms: initialize the "eof" attribute
* decoders:
  - mad: properly calculate ID3 size without libid3tag


ver 0.15.9 (2010/03/21)
* decoders:
  - mad: fix crash when seeking at end of song
  - mpcdec: fix negative shift on fixed-point samples
  - mpcdec: fix replay gain formula with v8
* playlist: fix single+repeat in random mode
* player: postpone song tags during cross-fade


ver 0.15.8 (2010/01/17)
* input:
  - curl: allow rewinding with Icy-Metadata
* decoders:
  - ffmpeg, flac, vorbis: added more flac/vorbis MIME types
  - ffmpeg: enabled libavformat's file name extension detection
* dbUtils: return empty tag value only if no value was found
* decoder_thread: fix CUE track playback
* queue: don't repeat current song in consume mode


ver 0.15.7 (2009/12/27)
* archive: